# frontmatter

./: .gitignore  README.md  pyproject.toml
src/typeset/: __init__.py  __main__.py  cli.py
src/typeset/config/: __init__.py  defaults.py  loader.py  models.py
src/typeset/ir/: __init__.py  document.py  nodes.py
src/typeset/parser/: __init__.py  docx_parser.py
src/typeset/renderers/: __init__.py  base.py
src/typeset/renderers/epub/: __init__.py  renderer.py
src/typeset/renderers/pdf/: __init__.py  renderer.py
